2008-02-29  Benjamin Otte  <otte@gnome.org>

	* common/gdbusutils.c: (dbus_source_add_watch):
	* daemon/dbus-gmain.c: (connection_setup_add_watch):
	use the right names for dbus version macros

2008-02-29  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c (is_connected), (do_mount),
	(do_open_for_read), (is_busy), (do_read), (do_query_info),
	(do_query_fs_info), (do_enumerate), (do_delete),
	(do_make_directory): Don't use a temporary error to set
	jobs as failed, use g_vfs_job_failed instead
	Error out properly when trying to open a directory for read

2008-02-29  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c (g_vfs_backend_obexftp_finalize),
	(_retrieve_folder_listing), (_query_file_info_helper),
	(do_open_for_read), (do_query_info), (do_query_fs_info),
	(do_enumerate), (do_delete): Use a convenience function
	to load directory listings, implement a simple cache there
	that keeps folder listings for 3 seconds (should speed up
	folder enumeration followed by info fetching, as well
	as checking for non-existant files)

2008-02-29  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsdaemonutils.[ch]:
	Rename gvfs_file_info_populate_names() to
        gvfs_file_info_populate_names_as_local() and
	add docs explaining when to use this function
	and when not to.

2008-02-29  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsdaemonutils.c:
        (gvfs_file_info_populate_content_types):
	Use g_content_type_get_icon() for the icon mapping.
	Use folder, not folder-remote for icon. I don't
	think we should use folder-remote for things like
	shares, not normal folders.

2008-02-29  Cosimo Cecchi  <cosimoc@gnome.org>

	* daemon/gvfsbackendcomputer.c: (recompute_files),
	(mount_volume_from_drive), (report_no_media_error),
	(poll_for_media_cb), (try_mount_mountable):
	Implement media polling for Computer backend, handling the case when
	no media is in the drive. Also adds a new string. (#514135)
